--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,13 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "d3": "^7.8.5",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
