--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "d3": "^7.8.5",
+    "intro.js": "^7.2.0",
+    "intro.js-react": "^1.0.0",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
