--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.2.0
 click==8.1.3
 Flask==2.3.2
 Flask-Cors==4.0.0
+gunicorn==21.2.0
 idna==3.4
 importlib-metadata==6.7.0
 itsdangerous==2.1.2
@@ -13,6 +14,7 @@ llvmlite==0.40.1
 MarkupSafe==2.1.3
 numba==0.57.1
 numpy==1.24.4
+packaging==23.1
 pandas==2.0.3
 pynndescent==0.5.10
 python-dateutil==2.8.2
